--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -25,21 +25,21 @@
   pageRef = "posts"
   weight = 10
 
-[[main]]
-  name = "Parent"
-  weight = 20
+#[[main]]
+#  name = "Parent"
+#  weight = 20
 
-[[main]]
-  name = "example sub-menu 1"
-  parent = "Parent"
-  pageRef = "posts"
-  weight = 20
+#[[main]]
+#  name = "example sub-menu 1"
+#  parent = "Parent"
+#  pageRef = "posts"
+#  weight = 20
 
-[[main]]
-  name = "example sub-menu 2"
-  parent = "Parent"
-  pageRef = "posts"
-  weight = 20
+#[[main]]
+#  name = "example sub-menu 2"
+#  parent = "Parent"
+#  pageRef = "posts"
+#  weight = 20
 
 #[[subnavigation]]
 #  name = "An interesting topic"
